--- a/series/index.html
+++ b/series/index.html
@@ -19,13 +19,13 @@ Series - Jack Beoris
         <meta property="og:title" content="Series - Jack Beoris" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content=""/>
-<meta property="og:url" content="https://jackbeoris.com/series/"/>
+<meta property="og:url" content="https://www.jackbeoris.com/series/"/>
 <meta property="og:site_name" content="Jack Beoris"/>
 
 
 
 
-<meta property="og:image" content="https://jackbeoris.com/home/profile.jpeg"/>
+<meta property="og:image" content="https://www.jackbeoris.com/home/profile.jpeg"/>
 
 
 
@@ -151,7 +151,7 @@ Series - Jack Beoris
         
 
 
-<script src="https://jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
+<script src="https://www.jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
 
 
 
