--- a/404.html
+++ b/404.html
@@ -19,13 +19,13 @@
         <meta property="og:title" content="404 Page not found - Jack Beoris" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content=""/>
-<meta property="og:url" content="https://jackbeoris.com/404.html"/>
+<meta property="og:url" content="https://www.jackbeoris.com/404.html"/>
 <meta property="og:site_name" content="Jack Beoris"/>
 
 
 
 
-<meta property="og:image" content="https://jackbeoris.com/home/profile.jpeg"/>
+<meta property="og:image" content="https://www.jackbeoris.com/home/profile.jpeg"/>
 
 
 
@@ -138,7 +138,7 @@
         
 
 
-<script src="https://jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
+<script src="https://www.jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
 
 
 
