--- a/home/index.html
+++ b/home/index.html
@@ -19,12 +19,12 @@ Howdy - Jack Beoris
         <meta property="og:title" content="Howdy - Jack Beoris" />
 <meta property="og:type" content="website" />
 <meta property="og:description" content=""/>
-<meta property="og:url" content="https://jackbeoris.com/home/"/>
+<meta property="og:url" content="https://www.jackbeoris.com/home/"/>
 <meta property="og:site_name" content="Jack Beoris"/>
 
 
 
-<meta property="og:image" content="https://jackbeoris.com/home/profile.jpeg"/>
+<meta property="og:image" content="https://www.jackbeoris.com/home/profile.jpeg"/>
 
 
 
@@ -153,7 +153,7 @@ Howdy - Jack Beoris
         
 
 
-<script src="https://jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
+<script src="https://www.jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
 
 
 
