--- a/404.html
+++ b/404.html
@@ -116,7 +116,7 @@
 
                 
     <div class="container markdown top-pad">
-        Oops! Either you&rsquo;ve found a bug (in which case, <a href="mailto:jack@beoris.com">please tell me</a>)  or you&rsquo;re just making things up. This page doesn&rsquo;t exist!
+        Oops! Either you&rsquo;ve found a bug (in which case, <a href="mailto:jack@jackbeoris.com">please tell me</a>)  or you&rsquo;re just making things up. This page doesn&rsquo;t exist!
     </div>
 
 
