--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
 
 
 
-<link rel="stylesheet" href="/css/main.min.27124e203350a207aed4fa0189d54a43afabc3dd78e9af197ea81de9f25e953f.css" integrity="sha256-JxJOIDNQogeu1PoBidVKQ6&#43;rw9146a8Zfqgd6fJelT8=" crossorigin="anonymous" media="screen">
+<link rel="stylesheet" href="/css/main.min.27124e203350a207aed4fa0189d54a43afabc3dd78e9af197ea81de9f25e953f.css" integrity="" crossorigin="anonymous" media="screen">
 
 
 
@@ -138,7 +138,7 @@
         
 
 
-<script src="https://www.jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity="sha256-XCPAQ38AGkaco3OkZab3SHID0Y4Qzf922Gpgr2bV7ig="></script>
+<script src="https://www.jackbeoris.com/js/bundle.5c23c0437f001a469ca373a465a6f7487203d18e10cdff76d86a60af66d5ee28.js" integrity=""></script>
 
 
 
